--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -4,7 +4,7 @@ on:
   # Триггер для запуска рабочего процесса при пушах в основную ветку
   push:
     branches:
-      - main
+      - master
 
   # Позволяет вручную запускать рабочий процесс из вкладки Actions
   workflow_dispatch:
