--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -4,7 +4,7 @@ on:
   # Триггер для запуска рабочего процесса при пушах в основную ветку
   push:
     branches:
-      - master
+      - main
 
   # Позволяет вручную запускать рабочий процесс из вкладки Actions
   workflow_dispatch:
@@ -32,16 +32,23 @@ jobs:
     env:
       HUGO_VERSION: 0.137.1  # Укажите версию Hugo для использования
     steps:
-      - name: Установить Hugo CLI
+      - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-
-      - name: Настроить Pages
+      - name: Install Dart Sass
+        run: sudo snap install dart-sass
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          fetch-depth: 0
+      - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
-
-      - name: Сборка с Hugo
+      - name: Install Node.js dependencies
+        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
+      - name: Build with Hugo
         env:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
           HUGO_ENVIRONMENT: production
@@ -51,8 +58,7 @@ jobs:
             --gc \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
-
-      - name: Загрузить артефакт для развертывания
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
